# StructPO

./: .gitignore  CompRL  README.md  data  eval_results  hpc_manual  logs  models  pyproject.toml  requirements.txt
configs/deepspeed/: ds_zero3.json
configs/dpo/: qwen3_4b_contrastive_dpo_beta005.yaml  qwen3_4b_structural_dpo.yaml  qwen3_4b_structural_dpo_beta005.yaml  qwen3_4b_structural_dpo_beta020.yaml  qwen3_4b_type13_dpo_beta005.yaml  qwen3_4b_type13_dpo_beta020.yaml  qwen3_8b_contrastive_dpo_beta005.yaml  qwen3_8b_structural_dpo_lora.yaml  qwen3_8b_type13_dpo_beta005.yaml  qwen3_8b_type13_dpo_beta010.yaml  qwen3_8b_type13_dpo_beta020.yaml
configs/sft/: qwen3_4b_dse_sft.yaml  qwen3_8b_dse_sft_lora.yaml  qwen3_8b_dse_sft_lora_resume.yaml  qwen3_8b_original_sft_lora.yaml
configs/slurm/: evaluate.sh  gen_math500_rollouts_1hr.sh  generate_rollouts.sh  generate_rollouts_4b.sh  generate_rollouts_8b.sh  hint_pilot_1hr.sh  merge_eval_4b.sh  merge_eval_4b_generic.sh  merge_eval_8b_generic.sh  merge_lora_4b.sh  merge_lora_8b.sh  (+8 more)
docs/: 29-exploration-quality.md  30-automated-typed-dse.md  33-exploration-quality-rl.md  README.md
eval_results/: dpo_pair_analysis.md
experiments/: exploration_quality.py  structural_reward_gap.py
scripts/: analyze_dpo_pairs.py  annotate_and_build_pairs.py  compare_results.py  download_models.sh  evaluate.py  experiment_rt_dag.py  generate_rollouts.py  merge_lora.py  merge_rollout_shards.py  post_rollout.sh  run_pipeline_4b.sh  run_pipeline_8b.sh  setup_brics_env.sh  setup_brics_eval_env.sh  smoke_test.py
src/: __init__.py
(+50 files in other folders)
