[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "structpo"
version = "0.1.0"
description = "Structural Preference Optimization for Reasoning Quality"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Chang Shu", email = "cs2175@cam.ac.uk"}]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.optional-dependencies]
train = [
    "llamafactory==0.9.3",
    "deepspeed==0.16.9",
]
eval = [
    "vllm>=0.11.0",
]
all = [
    "structpo[train,eval]",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["src*"]
